# intg-kodi-mpchc

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  Makefile  README.md  driver.json  pyproject.toml  requirements.txt  test-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  python-code-format.yml  release.yml
docker/: Dockerfile  docker-compose.yml
src/: bridge_client.py  config.py  const.py  driver.py  htpc.py  htpc_client.py  media_player.py  remote_entity.py  selects.py  sensors.py  setup_flow.py
